feat: add new email templates and events for Nada Consta notifications and update existing email templates for consistency