@@ -5,13 +5,14 @@ import static org.mockito.Mockito.*;
 
 import br.com.utfpr.gerenciamento.server.dto.NadaConstaResponseDto;
 import br.com.utfpr.gerenciamento.server.enumeration.NadaConstaStatus;
+import br.com.utfpr.gerenciamento.server.event.nadaConsta.NadaConstaEmitidoEvent;
+import br.com.utfpr.gerenciamento.server.event.nadaConsta.NadaConstaPendenciasEvent;
 import br.com.utfpr.gerenciamento.server.model.Emprestimo;
 import br.com.utfpr.gerenciamento.server.model.EmprestimoItem;
 import br.com.utfpr.gerenciamento.server.model.Item;
 import br.com.utfpr.gerenciamento.server.model.NadaConsta;
 import br.com.utfpr.gerenciamento.server.model.Usuario;
 import br.com.utfpr.gerenciamento.server.repository.NadaConstaRepository;
-import br.com.utfpr.gerenciamento.server.service.EmailService;
 import br.com.utfpr.gerenciamento.server.service.EmprestimoService;
 import br.com.utfpr.gerenciamento.server.service.SystemConfigService;
 import br.com.utfpr.gerenciamento.server.service.UsuarioService;
@@ -19,12 +20,14 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.modelmapper.ModelMapper;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.test.context.ActiveProfiles;
 
 @SpringBootTest
@@ -33,27 +36,27 @@ class NadaConstaServiceImplTest {
   private NadaConstaRepository nadaConstaRepository;
   private UsuarioService usuarioService;
   private EmprestimoService emprestimoService;
-  private EmailService emailService;
   private SystemConfigService systemConfigService;
   private ModelMapper modelMapper;
   private NadaConstaServiceImpl service;
+  private ApplicationEventPublisher eventPublisher;
 
   @BeforeEach
   void setup() {
     nadaConstaRepository = Mockito.mock(NadaConstaRepository.class);
     usuarioService = Mockito.mock(UsuarioService.class);
     emprestimoService = Mockito.mock(EmprestimoService.class);
-    emailService = Mockito.mock(EmailService.class);
     systemConfigService = Mockito.mock(SystemConfigService.class);
     modelMapper = Mockito.mock(ModelMapper.class);
+    eventPublisher = Mockito.mock(ApplicationEventPublisher.class);
     service =
         new NadaConstaServiceImpl(
             nadaConstaRepository,
             usuarioService,
             modelMapper,
             emprestimoService,
-            emailService,
-            systemConfigService);
+            systemConfigService,
+            eventPublisher);
     // Corrige o modelMapper para retornar um DTO válido
     when(modelMapper.map(any(), eq(NadaConstaResponseDto.class)))
         .thenReturn(new NadaConstaResponseDto());
@@ -76,23 +79,22 @@ class NadaConstaServiceImplTest {
         NadaConsta.builder()
             .id(1L)
             .usuario(usuario)
-            .status(NadaConstaStatus.PENDING)
+            .status(NadaConstaStatus.COMPLETED) // Corrigido para COMPLETED
             .createdAt(LocalDateTime.now())
             .createdBy("Aluno Teste")
             .build();
     when(nadaConstaRepository.save(any())).thenReturn(nadaConsta);
-    doNothing()
-        .when(emailService)
-        .sendEmailWithTemplate(any(), anyString(), anyString(), anyString());
     when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
     NadaConstaResponseDto dto = service.solicitarNadaConsta("123456");
     assertNotNull(dto);
-    verify(emailService)
-        .sendEmailWithTemplate(
-            any(),
-            eq("destino@utfpr.edu.br"),
-            eq("Declaração Nada Consta"),
-            eq("nada-consta-declaracao.html"));
+    ArgumentCaptor<NadaConstaEmitidoEvent> captor =
+        ArgumentCaptor.forClass(NadaConstaEmitidoEvent.class);
+    verify(eventPublisher).publishEvent(captor.capture());
+    NadaConstaEmitidoEvent event = captor.getValue();
+    assertEquals("destino@utfpr.edu.br", event.getRecipient());
+    assertEquals("Declaração Nada Consta", event.getSubject());
+    assertEquals("nada-consta-declaracao.html", event.getTemplateName());
+    assertNotNull(event.getTemplateData());
     verify(usuarioService).save(any(Usuario.class));
   }
 
@@ -112,10 +114,9 @@ class NadaConstaServiceImplTest {
     EmprestimoItem emprestimoItem = new EmprestimoItem();
     emprestimoItem.setItem(item);
     Emprestimo emprestimo = new Emprestimo();
-    emprestimo.setEmprestimoItem(List.of(emprestimoItem));
+    emprestimo.setEmprestimoItem(Set.of(emprestimoItem));
     emprestimo.setDataEmprestimo(LocalDate.now());
     emprestimo.setPrazoDevolucao(LocalDate.now().plusDays(7));
-    // Corrige o mock para usar o username
     when(emprestimoService.findAllEmprestimosAbertosByUsuario(usuario.getUsername()))
         .thenReturn(List.of(emprestimo));
     when(nadaConstaRepository.save(any()))
@@ -127,24 +128,22 @@ class NadaConstaServiceImplTest {
                 .createdAt(LocalDateTime.now())
                 .createdBy("Aluno Teste")
                 .build());
-    doNothing()
-        .when(emailService)
-        .sendEmailWithTemplate(any(), anyString(), anyString(), anyString());
     NadaConstaResponseDto dto = service.solicitarNadaConsta("123456");
     assertNotNull(dto);
-    ArgumentCaptor<Map<String, Object>> captor = ArgumentCaptor.forClass(Map.class);
-    verify(emailService)
-        .sendEmailWithTemplate(
-            captor.capture(),
-            eq("aluno@utfpr.edu.br"),
-            eq("Pendências de Empréstimos"),
-            eq("pendencias-emprestimos.html"));
-    Object emprestimosObj = captor.getValue().get("emprestimos");
+    ArgumentCaptor<NadaConstaPendenciasEvent> captor =
+        ArgumentCaptor.forClass(NadaConstaPendenciasEvent.class);
+    verify(eventPublisher).publishEvent(captor.capture());
+    NadaConstaPendenciasEvent event = captor.getValue();
+    assertEquals("aluno@utfpr.edu.br", event.getRecipient());
+    assertEquals("Pendências de Empréstimos", event.getSubject());
+    assertEquals("pendencias-emprestimos.html", event.getTemplateName());
+    assertNotNull(event.getTemplateData());
+    Object emprestimosObj = event.getTemplateData().get("emprestimos");
     assertNotNull(emprestimosObj);
     @SuppressWarnings("unchecked")
     List<Map<String, Object>> itens = (List<Map<String, Object>>) emprestimosObj;
     assertEquals(1, itens.size());
-    assertEquals("Notebook", itens.get(0).get("itemNome"));
+    assertEquals("Notebook", itens.getFirst().get("itemNome"));
   }
 
   @Test
